--- a/roles/vagrant/tasks/main.yml
+++ b/roles/vagrant/tasks/main.yml
@@ -15,6 +15,8 @@
       - qemu-kvm
       - libvirt-daemon-system
       - libvirt-clients
+      - python3-libvirt
+      - python3-lxml
       - bridge-utils
       - vagrant
       - ebtables
