updated deployments to support libvirtd

--- a/roles/prerequisites/tasks/main.yml
+++ b/roles/prerequisites/tasks/main.yml
@@ -18,5 +18,6 @@
 - name: enable libvirtd
   ansible.builtin.systemd:
     name: libvirtd
+    state: started
     enabled: true
     daemon_reload: true
