--- a/roles/prerequisites/tasks/main.yml
+++ b/roles/prerequisites/tasks/main.yml
@@ -9,6 +9,15 @@
   loop:
     - libhwloc-dev
     - curl
+    - qemu-kvm
+    - libvirt-daemon-system
   loop_control:
     loop_var: package
     label: "{{ package }}"
+
+- name: enable libvirtd
+  ansible.builtin.systemd:
+    name: libvirtd
+    state: started
+    enabled: true
+    daemon_reload: true
