added virt-manager dependency

--- a/roles/prerequisites/tasks/main.yml
+++ b/roles/prerequisites/tasks/main.yml
@@ -11,6 +11,7 @@
     - curl
     - qemu-kvm
     - libvirt-daemon-system
+    - virt-manager
   loop_control:
     loop_var: package
     label: "{{ package }}"
