--- a/roles/prerequisites/tasks/main.yml
+++ b/roles/prerequisites/tasks/main.yml
@@ -22,3 +22,9 @@
     state: started
     enabled: true
     daemon_reload: true
+
+- name: enable default network
+  community.libvirt.virt_net:
+    autostart: true
+    state: active
+    name: default
