feat: auto-start of libvirt default network (#47)

--- a/roles/prerequisites/tasks/main.yml
+++ b/roles/prerequisites/tasks/main.yml
@@ -12,6 +12,9 @@
     - qemu-kvm
     - libvirt-daemon-system
     - virt-manager
+    - python3-lxml
+    - dnsmasq
+
   loop_control:
     loop_var: package
     label: "{{ package }}"
@@ -22,3 +25,9 @@
     state: started
     enabled: true
     daemon_reload: true
+    
+- name: enable default network
+  community.libvirt.virt_net:
+    autostart: true
+    state: active
+    name: default
