--- a/roles/nox/tasks/00-preflight.yml
+++ b/roles/nox/tasks/00-preflight.yml
@@ -84,5 +84,5 @@
 
 - name: print nox config file
   debug:
-    msg: lookup('ansible.builtin.file', 'files/{{ fluence_project_dir }}/.fluence/configs/{{ fluence_instance_id }}_Config.toml')
+    msg: "{{ lookup('ansible.builtin.file', 'files/{{ fluence_project_dir }}/.fluence/configs/{{ fluence_instance_id }}_Config.toml') }}"
   when: show_nox_config
