--- a/roles/ccp/tasks/main.yml
+++ b/roles/ccp/tasks/main.yml
@@ -3,4 +3,7 @@
   ansible.builtin.include_tasks: 00-preflight.yml
 
 - name: Install CCP
+  tags:
+    - never
+    - cleanup
   ansible.builtin.include_tasks: 01-install.yml
