--- a/roles/promtail/tasks/01-install.yml
+++ b/roles/promtail/tasks/01-install.yml
@@ -37,6 +37,22 @@
     state: present
   when: fluence_promtail_user != "root"
 
+- name: stop promtail
+  tags:
+    - never
+    - cleanup
+  ansible.builtin.systemd:
+    name: fluence-promtail
+    state: stopped
+
+- name: cleanup promtail state
+  tags:
+    - never
+    - cleanup
+  ansible.builtin.file:
+    path: "{{ fluence_promtail_dir }}"
+    state: absent
+
 - name: create promtail directories
   ansible.builtin.file:
     path: "{{ fluence_promtail_dir }}"
@@ -80,7 +96,7 @@
     mode: 0o755
   notify: restart promtail
 
-- name: enable promtail
+- name: enable and start promtail
   ansible.builtin.systemd:
     name: fluence-promtail
     enabled: true
