--- a/roles/nox/defaults/main.yml
+++ b/roles/nox/defaults/main.yml
@@ -3,6 +3,7 @@ nox_dir: "/opt/fluence/nox"
 nox_project_dir: ""
 nox_group: "nox"
 nox_user: "nox"
+nox_log_level: "info"
 nox_branch: ""
 nox_cleanup_state: false
 nox_unit_file: |
@@ -15,7 +16,7 @@ nox_unit_file: |
   Environment="FLUENCE_CONFIG={{ nox_dir }}/Config.toml"
   Environment="FLUENCE_BASE_DIR={{ nox_dir }}/state"
   Environment="FLUENCE_ROOT_KEY_PAIR__PATH={{ nox_dir }}/state/root_secret_key.ed25519"
-  Environment="RUST_LOG=info,chain-listener=debug,chain-connector=debug"
+  Environment="RUST_LOG={{ nox_log_level }}"
   ExecStart={{ nox_dir }}/nox
   Restart=on-failure
   User=root
