--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -65,3 +65,6 @@ jobs:
 
       - name: Run ${{ matrix.scenario }} scenario
         run: molecule test --scenario-name "${{ matrix.scenario }}"
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
