--- a/roles/nox/defaults/main.yml
+++ b/roles/nox/defaults/main.yml
@@ -23,3 +23,6 @@ nox_unit_file: |
   [Install]
   WantedBy=multi-user.target
 
+fluence_cleanup: false
+nox_cleanup: "{{ false | default(fluence_cleanup) }}"
+nox_cleanup_state: "{{ nox_cleanup }}"
