--- a/roles/ccp/tasks/main.yml
+++ b/roles/ccp/tasks/main.yml
@@ -3,6 +3,9 @@
   ansible.builtin.include_tasks: 00-preflight.yml
 
 - name: Install CCP
-  tags:
-    - cleanup
   ansible.builtin.include_tasks: 01-install.yml
+
+- name: Uninstall CCP
+  tags:
+    - uninstall
+  ansible.builtin.include_tasks: 02-uninstall.yml
