--- a/roles/promtail/tasks/main.yml
+++ b/roles/promtail/tasks/main.yml
@@ -3,5 +3,9 @@
   include_tasks: 00-preflight.yml
 
 - name: Install promtail
-  tags: configs
   include_tasks: 01-install.yml
+
+- name: Uninstall promtail
+  tags:
+    - uninstall
+  include_tasks: 02-uninstall.yml
