--- a/roles/nox/tasks/01-install.yml
+++ b/roles/nox/tasks/01-install.yml
@@ -18,8 +18,36 @@
     system: true
     shell: "/sbin/nologin"
     group: "{{ nox_group }}"
+    groups:
+      - libvirt
     create_home: false
     state: present
+
+- name: add nox user to libvirt group
+  ansible.builtin.user:
+    name: "libvirt-qemu"
+    groups:
+      - "{{ nox_group }}"
+    create_home: false
+    state: present
+
+- name: increase ulimits for nox user
+  ansible.builtin.pam_limits:
+  args: "{{ limit }}"
+  loop_control:
+    loop_var: "limit"
+    label: "{{ limit.domain }} {{ limit.limit_item }}:{{ limit.limit_type }}"
+  loop:
+    - domain: "nox"
+      limit_type: "hard"
+      limit_item: "nofile"
+      comment: "Increse max open file hard limit"
+      value: 65536
+    - domain: "nox"
+      limit_type: "soft"
+      limit_item: "nofile"
+      comment: "Increse max open file soft limit"
+      value: 65536
 
 - name: cleanup nox state
   ansible.builtin.file:
