feat: Add uninstall tag and rename cleanup flags (#58)
* Add cleanup tag

* F

* Fix

* Update readme and fixes

* Fix

* Bye bye debian

* Update

* Update

--- a/roles/ccp/defaults/main.yml
+++ b/roles/ccp/defaults/main.yml
@@ -4,7 +4,6 @@ ccp_project_dir: ""
 ccp_group: "ccp"
 ccp_user: "ccp"
 ccp_branch: ""
-ccp_cleanup_state: false
 ccp_unit_file: |
   [Unit]
   Description=CCP - Fluence capacity commitment prover
@@ -19,3 +18,7 @@ ccp_unit_file: |
 
   [Install]
   WantedBy=multi-user.target
+
+fluence_cleanup: false
+ccp_cleanup: "{{ false | default(fluence_cleanup) }}"
+ccp_cleanup_state: "{{ false | default(ccp_cleanup) }}"
