--- a/roles/ccp/tasks/main.yml
+++ b/roles/ccp/tasks/main.yml
@@ -4,3 +4,8 @@
 
 - name: Install CCP
   ansible.builtin.include_tasks: 01-install.yml
+
+- name: Uninstall CCP
+  tags:
+    - uninstall
+  ansible.builtin.include_tasks: 02-uninstall.yml
