--- a/roles/promtail/tasks/01-install.yml
+++ b/roles/promtail/tasks/01-install.yml
@@ -80,7 +80,7 @@
     mode: 0o755
   notify: restart promtail
 
-- name: enable promtail
+- name: enable and start promtail
   ansible.builtin.systemd:
     name: fluence-promtail
     enabled: true
