--- a/roles/ccp/tasks/01-install.yml
+++ b/roles/ccp/tasks/01-install.yml
@@ -13,11 +13,14 @@
     create_home: false
     state: present
 
-- name: cleanup ccp state
-  ansible.builtin.file:
-    path: "{{ ccp_dir }}"
-    state: absent
-  when: ccp_cleanup_state
+- name: cleanup ccp
+  when:
+    - ccp_cleanup_state == true
+  ansible.builtin.include_tasks:
+    file: 02-uninstall.yml
+    apply:
+      tags:
+        - uninstall
 
 - name: create ccp directories
   ansible.builtin.file:
@@ -128,8 +131,9 @@
     mode: 0o755
   notify: restart ccp
 
-- name: enable ccp
+- name: enable and start ccp
   ansible.builtin.systemd:
     name: ccp
     enabled: true
     daemon_reload: true
+    state: started
