--- a/roles/promtail/defaults/main.yml
+++ b/roles/promtail/defaults/main.yml
@@ -2,7 +2,7 @@ skip_handlers: false
 
 fluence_promtail_download_url: "https://github.com/grafana/loki/releases"
 
-fluence_promtail_api_url: "https://loki.fluence.dev/loki/api/v1/push"
+fluence_promtail_api_url: "https://logs.fluence.dev/loki/api/v1/push"
 
 fluence_promtail_group: "promtail"
 fluence_promtail_user: "promtail"
